# tmux-workspace

./: .gitignore  README.md  app.py  database.py
static/css/: style.css
templates/: index.html
tex-workspace/: .gitignore  pyproject.toml
tex-workspace/electron/: package-lock.json  package.json
tex-workspace/electron/src/: index.html  main.js  preload.js
tex-workspace/tex_workspace/: __init__.py  __main__.py  app.py  database.py
tex-workspace/tex_workspace/static/css/: style.css
tex-workspace/tex_workspace/templates/: index.html
v2/: README.md  app.py  database.py  migrate_from_v1.py  pyproject.toml
v2/static/css/: style.css
v2/templates/: index.html
v2/tmux_workspace/: __init__.py  __main__.py  app.py
v2/tmux_workspace/static/css/: style.css
v2/tmux_workspace/templates/: index.html
