[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tex-workspace"
version = "1.0.0"
description = "Web-based LaTeX IDE with file browser, CodeMirror editor, and PDF viewer"
authors = [{name = "dsdev"}]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
keywords = ["latex", "tex", "editor", "ide", "pdf", "workspace", "web", "flask"]
dependencies = [
    "flask>=2.0",
    "flask-socketio>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[project.scripts]
tex-workspace = "tex_workspace.app:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
tex_workspace = ["templates/*.html", "static/css/*.css"]
