[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tmux-workspace"
version = "2.0.0"
description = "Web-based terminal manager with tmux integration and workspace groups"
authors = [{name = "dsdev"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Shells",
    "Topic :: Terminals :: Terminal Emulators/X Terminals",
]
keywords = ["tmux", "terminal", "workspace", "web", "flask"]
dependencies = [
    "flask>=2.0",
    "flask-socketio>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/elinaliu-stony/tmux-workspace"
Repository = "https://github.com/elinaliu-stony/tmux-workspace"
Issues = "https://github.com/elinaliu-stony/tmux-workspace/issues"

[project.scripts]
tmux-workspace = "tmux_workspace.app:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
tmux_workspace = ["templates/*.html", "static/css/*.css"]
